--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
             - "host.docker.internal:host-gateway"
         ports:
             - "${APP_PORT:-80}:80"
-            - "${VITE_PORT:-5173}:${VITE_PORT:-5173}"
+            # - "${VITE_PORT:-5173}:${VITE_PORT:-5173}"
+            - "${REVERB_SERVER_PORT:-8081}:8081"
         environment:
             WWWUSER: "${WWWUSER}"
             LARAVEL_SAIL: 1
@@ -53,6 +54,18 @@ services:
             - "${FORWARD_REDIS_PORT:-6379}:6379"
         networks:
             - sail
+    vite:
+        image: node:16 # или другой образ Node.js
+        volumes:
+            - ".:/app"
+        working_dir: /app
+        command: ["npm", "run", "dev"]
+        ports:
+            - "${VITE_PORT:-5173}:${VITE_PORT:-5173}"
+        networks:
+            - sail
+        depends_on:
+            - laravel.test
 networks:
     sail:
         driver: bridge
